Converting dimensions to tag groups
